--- a/Sass/components/_buttons.scss
+++ b/Sass/components/_buttons.scss
@@ -97,3 +97,14 @@ button {
     transition: 0.3s ease-in-out;
   }
 }
+
+.cover {
+  position: fixed;
+  opacity: 0.9;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: $bg-light;
+  z-index: 1;
+}
