--- a/Sass/main.css
+++ b/Sass/main.css
@@ -1483,6 +1483,17 @@ button {
   transition: 0.3s ease-in-out;
 }
 
+.cover {
+  position: fixed;
+  opacity: 0.9;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #f8f9fa;
+  z-index: 1;
+}
+
 .main-container {
   background-color: #f8f9fa;
   height: 92vh;
