--- a/Sass/components/_buttons.scss
+++ b/Sass/components/_buttons.scss
@@ -108,3 +108,17 @@ button {
   background-color: $bg-light;
   z-index: 1;
 }
+#close {
+  color: $white;
+  background-color: $text-dark;
+  cursor: pointer;
+  font-size: $font-size;
+  font-weight: 600;
+  border-radius: 5px;
+  padding: $header-space $header-space * 2;
+  transition: 0.3s ease;
+  font-family: $main-font;
+  &:hover {
+    transform: translateY(-2px);
+  }
+}
